# quartr

./: .bumpversion.cfg  .dockerignore  Dockerfile  LICENSE  Makefile  README.md  TODO.md  docker-compose.yaml  hypercorn.toml  pyproject.toml  requests.rest  venv.mk
.deploy/quartr/: Chart.yaml  values.yaml
.deploy/quartr/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
.deploy/quartr/templates/tests/: test-connection.yaml
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh  run-server.sh
.github/workflows/: pr-test.yaml  publish.yaml  publish.yml
.helm/quartr/: Chart.yaml  README.md  values.yaml
.helm/quartr/templates/: deployment.yaml  ingress.yaml  service.yaml
src/quartr/: __init__.py  app.py  hello.py
src/quartr/blueprints/: health.py  hello.py
src/quartr/templates/: index.html
tests/: conftest.py  requests.rest  test_health.py  test_hello.py
tests/unit/: conftest.py  test_health.py  test_index.py  test_static.py
