[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quartr"
version = "0.0.1"
dependencies = ["quart==0.20.0", "hypercorn==0.17.3"]
requires-python = ">=3.12"
authors = [{ name = "Cliff Snyder", email = "cliff.snyder@gmail.com" }]
maintainers = [{ name = "Cliff Snyder", email = "cliff.snyder@gmail.com" }]
description = "Terraform Workspace Manager"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
src_paths = ["src"]
line_length = 88
skip = ["venv", "build"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
exclude = ["venv", "build"]
