[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quartr"
version = "0.1.5"
dependencies = ["quart==0.20.0", "hypercorn==0.17.3", "bump2version==1.0.1"]
requires-python = ">=3.12"
authors = [{ name = "Cliff Snyder", email = "cliff.snyder@gmail.com" }]
maintainers = [{ name = "Cliff Snyder", email = "cliff.snyder@gmail.com" }]
description = "A quart template app"
readme = "README.md"
license = "MIT"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.black]
line-length = 88
target-version = ["py313"]
exclude = "(venv|build)"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
line_length = 88
skip = ["venv", "build"]

[tool.mypy]
exclude = ["venv", "build"]

[tool.coverage.run]
omit = ["src/quartr/asgi.py"]
