[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quartr"
version = "0.3.2"
dependencies = ["quart==0.20.0", "uvicorn==0.40.0"]
requires-python = ">=3.12"
authors = [{ name = "Cliff Snyder", email = "cliff.snyder@gmail.com" }]
maintainers = [{ name = "Cliff Snyder", email = "cliff.snyder@gmail.com" }]
description = "A quart template app"
readme = "README.md"
license = "MIT"

[project.optional-dependencies]
dev = [
    "black",
    "bump2version",
    "isort",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.black]
line-length = 88
target-version = ["py312"]
exclude = "(venv|build)"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
line_length = 88
skip = ["venv", "build"]

[tool.mypy]
exclude = ["venv", "build"]

[tool.coverage.run]
omit = ["src/quartr/asgi.py"]

[tool.coverage.report]
show_missing = true
fail_under = 90
